--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,80 @@
-name: CI
+name: Go
 
 on: [push, pull_request]
 
 jobs:
-  build:
+  # test:
+    # name: Test
+    # runs-on: ${{ matrix.os }}
+    # defaults:
+    #   run:
+    #     shell: bash
+    # strategy:
+    #   matrix:
+    #     os: [ubuntu-latest, macos-latest]
+    #     go: ['1.22', '1.23']
+    #   fail-fast: false
+    # env:
+    #   OS: ${{ matrix.os }}
+    #   GO: ${{ matrix.go }}
+    # steps:
+    #   - uses: actions/setup-go@v5
+    #     with:
+    #       go-version: ${{ matrix.go }}
+    #   - if: startsWith(matrix.os, 'macos')
+    #     run: brew update
+    #   - name: Get Build Tools
+    #     run: |
+    #       go install github.com/ory/go-acc@latest
+    #   - name: Add $GOPATH/bin to $PATH
+    #     run: |
+    #       echo "$(go env GOPATH)/bin" >> "$GITHUB_PATH"
+    #   - uses: actions/checkout@v4
+    #   - name: Test
+    #     run: |
+    #       go-acc . -- -race -v -tags "sqlite_allow_uri_authority sqlite_app_armor sqlite_column_metadata sqlite_foreign_keys sqlite_fts5 sqlite_introspect sqlite_json sqlite_math_functions sqlite_os_trace sqlite_preupdate_hook sqlite_secure_delete sqlite_see sqlite_stat4 sqlite_trace sqlite_unlock_notify sqlite_vacuum_incr sqlite_vtable"
+    #   - name: Upload coverage to Codecov
+    #     uses: codecov/codecov-action@v4
+    #     with:
+    #       env_vars: OS,GO
+    #       file: coverage.txt
+
+  test-windows:
+    name: Test for Windows
+    runs-on: windows-latest
+    defaults:
+      run:
+        shell: bash
     strategy:
       matrix:
-        go-version: [1.13.x, 1.14.x, 1.15.x]
-        platform: [ubuntu-latest]
-    runs-on: ${{ matrix.platform }}
+        go: ['1.21', '1.22']
+      fail-fast: false
+    env:
+      OS: windows-2019
+      GO: ${{ matrix.go }}
     steps:
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ matrix.go-version }}
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Test
-      run: |
-        go get github.com/frankbraun/gocheck
-        export PATH=$GOPATH/bin:$PATH
-        make test
+      - uses: msys2/setup-msys2@v2
+        with:
+          update: true
+          install: mingw-w64-x86_64-toolchain mingw-w64-x86_64-sqlite3 mingw-w64-x86_64-sqlcipher mingw-w64-x86_64-icu
+          msystem: MINGW64
+          path-type: inherit
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ matrix.go }}
+      - name: Get Build Tools
+        run: |
+          go install github.com/ory/go-acc@latest
+      - name: Add $GOPATH/bin to $PATH
+        run: |
+          echo "$(go env GOPATH)/bin" >> "$GITHUB_PATH"
+        shell: msys2 {0}
+      - uses: actions/checkout@v4
+      - name: 'Test'
+        run: go-acc . -- -race -v -tags "sqlite_allow_uri_authority sqlite_app_armor sqlite_column_metadata sqlite_foreign_keys sqlite_fts5 sqlite_introspect sqlite_json sqlite_math_functions sqlite_os_trace sqlite_preupdate_hook sqlite_secure_delete sqlite_see sqlite_stat4 sqlite_trace sqlite_unlock_notify sqlite_vacuum_incr sqlite_vtable"
+        shell: msys2 {0}
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          env_vars: OS,GO
+          file: coverage.txt
